--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 *   9  :  PRICING BOX       *
 *   10 :  CONTACT           *
 *   11 :  FOOTER            *
-*   12 :  RESPONSIVE        *
+*   12 :  RESFPONSIVE        *
 *****************************/
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Muli:400,600,700');
